--- a/public/css/client/home.css
+++ b/public/css/client/home.css
@@ -1,8 +1,13 @@
+/* ========== <Header> ========== */
+
 .home header {
     display: flex;
+    flex-direction: column;
     background-color: #d8d8d8;
-    padding: 20px;
+    padding: 0 10px;
     justify-content: space-around;
+    margin-bottom: 40px;
+    height: 100vh;
 }
 
 .home header .content {
@@ -10,22 +15,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 20px;
+}
+
+.home header .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.home header .img-container img {
+    margin: 10px 0;
 }
 
 .home header h1 {
     text-align: center;
-    font-size: 2.8rem;
+    font-size: 2.2rem;
+    margin: 10px 0;
 }
 
 .home header p {
-    margin-bottom: 20px;
-    padding: 0 40px;
     text-align: center;
 }
 
 .home header .btn-container {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .home header button {
@@ -33,3 +50,76 @@
     padding: 20px;
     font-size: 1.2em;
 }
+
+@media (min-width: 992px) {
+    .home header {
+        flex-direction: row;
+        padding: 0 50px;
+    }
+
+    .home header p {
+        margin-bottom: 20px;
+    }
+}
+
+/* ========== <Header /> ========== */
+
+/* ========== <About> ========== */
+.home .about .wrapper {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.home .about .wrapper .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.home .about .wrapper .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.home .about .wrapper .content p {
+    margin: 0 20px 20px 20px;
+    text-align: center;
+}
+
+.home .about .wrapper .content button {
+    width: 150px;
+    padding: 15px;
+    font-size: 1.2em;
+}
+
+@media (min-width: 768px) {
+    .home .about .wrapper {
+        flex-direction: row;
+    }
+
+    .home .about .wrapper .img-container {
+        margin-bottom: 0px;
+        margin-right: 20px;
+    }
+}
+
+/* ========== <About /> ========== */
+
+/* ========== <RecentProjects> ========== */
+.home .recent-projects .swiper {
+    width: 100%;
+    height: 400px;
+}
+
+.home .recent-projects .swiper .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* ========== <RecentProjects /> ========== */
