--- a/public/css/global.css
+++ b/public/css/global.css
@@ -11,3 +11,43 @@ body {
     background-color: #eeeeee;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.xs, .sm, .md, .lg, .xl, .xxl {
+    display: none !important;
+}
+
+@media (max-width: 575px) {
+    .xs {
+        display: inherit !important;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    .sm {
+        display: inherit !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .md {
+        display: inherit !important;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .lg {
+        display: inherit !important;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+    .xl {
+        display: inherit !important;
+    }
+}
+
+@media (min-width: 1400px) {
+    .xxl {
+        display: inherit !important;
+    }
+}
