--- a/public/css/client/index.css
+++ b/public/css/client/index.css
@@ -20,5 +20,59 @@
 }
 
 section {
-    margin-bottom: 60px;
+    margin: 100px 0 200px 0;
+}
+
+section:last-child {
+    margin-bottom: 0;
+}
+
+section.contact .wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+section.contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    max-width: 600px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+section.contact form input,
+section.contact form textarea {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: none;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+
+section.contact form input {
+    height: 50px;
+}
+
+section.contact form textarea {
+    height: 150px;
+}
+
+section.contact form button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+}
+
+section.contact ul li i {
+    font-size: 22px;
+}
+
+@media (min-width: 576px) {
+    section.contact .wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
 }
