--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,18 +1,37 @@
-@import url('normalize.css');
-@import url('fonts.css');
+@import url("normalize.css");
+@import url("fonts.css");
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 body {
     background-color: #eeeeee;
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
-.xs, .sm, .md, .lg, .xl, .xxl {
+.no-user-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+textarea {
+    resize: none;
+}
+
+.xs,
+.sm,
+.md,
+.lg,
+.xl,
+.xxl {
     display: none !important;
 }
 
