[add, fix] footer, about 1.0. cambios de seo en main layout

--- a/public/css/client/home.css
+++ b/public/css/client/home.css
@@ -142,8 +142,8 @@
     width: 250px;
 }
 
-.home .services .service .icon span {
-    font-size: 5rem;
+.home .services .service .icon > * {
+    font-size: 4rem;
 }
 
 .home .services .service h3 {
