--- a/public/css/client/index.css
+++ b/public/css/client/index.css
@@ -15,16 +15,12 @@
         font-size: 2.4rem;
     }
     .container {
-        padding: 30px;
+        padding: 0 30px;
     }
 }
 
 section {
     margin: 100px 0 200px 0;
-}
-
-section:last-child {
-    margin-bottom: 0;
 }
 
 section.contact .wrapper {
@@ -75,4 +71,44 @@ section.contact ul li i {
         justify-content: space-between;
         width: 100%;
     }
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 300px;
+}
+
+footer > div:first-child {
+    height: 100%;
+    padding: 30px;
+    background-color: #d8d8d8;
+}
+
+footer .social-networks {
+    display: flex;
+}
+
+footer .social-networks .social-network {
+    border-radius: 50%;
+    background-color: #000000;
+}
+
+footer .social-networks .social-network a {
+    background-color: black;
+    color: #ffffff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+}
+
+footer .bottom {
+    text-align: center;
+    padding: 10px 0;
+    background-color: #b1b1b1;
 }
