--- a/public/css/global.css
+++ b/public/css/global.css
@@ -15,6 +15,10 @@ body {
         sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 .no-user-select {
     -webkit-user-select: none;
     -moz-user-select: none;
