--- a/public/css/client/index.css
+++ b/public/css/client/index.css
@@ -1,5 +1,47 @@
 :root {
+    --nav-height: 80px;
     --footer-height: 300px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    height: var(--nav-height);
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 20;
+    position: fixed;
+    transition: all ease 0.3s;
+}
+
+.nav-spacing {
+    height: var(--nav-height);
+}
+
+nav .logo-container {
+    width: var(--nav-height);
+    height: var(--nav-height);
+}
+
+nav .logo-container img {
+    width: 100%;
+    height: 100%;
+}
+
+nav .navbar {
+    display: flex;
+    align-items: center;
+}
+
+nav .navbar .navbar-item {
+    margin: 0 10px;
+    color: #000;
+    cursor: pointer;
 }
 
 main.container {
@@ -8,14 +50,23 @@ main.container {
     max-width: 1200px;
 }
 
-.title-section {
+h1 {
+    text-align: center;
+    font-size: 2.2rem;
+    margin: 10px 0;
+}
+
+h2 {
     text-align: center;
     font-size: 2rem;
     margin-bottom: 40px;
 }
 
 @media (min-width: 576px) {
-    .title-section {
+    h1 {
+        font-size: 2.6rem;
+    }
+    h2 {
         font-size: 2.4rem;
     }
     .container {
