--- a/public/css/client/index.css
+++ b/public/css/client/index.css
@@ -3,7 +3,7 @@
     --footer-height: 300px;
 }
 
-nav {
+nav.topbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,25 +23,123 @@ nav {
     height: var(--nav-height);
 }
 
-nav .logo-container {
+nav.topbar .logo-container {
     width: var(--nav-height);
     height: var(--nav-height);
 }
 
-nav .logo-container img {
+nav.topbar .logo-container img {
     width: 100%;
     height: 100%;
 }
 
-nav .navbar {
-    display: flex;
+nav.topbar .navbar {
+    display: none;
     align-items: center;
 }
 
-nav .navbar .navbar-item {
+nav.topbar .navbar .navbar-item {
     margin: 0 10px;
     color: #000;
     cursor: pointer;
+}
+
+nav.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px;
+    height: calc(100vh - var(--nav-height));
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    top: var(--nav-height);
+    right: -250px;
+    width: 250px;
+    z-index: 20;
+    position: fixed;
+    transition: all ease 0.3s;
+}
+
+nav.sidebar ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+}
+
+nav.sidebar ul li {
+    width: 100%;
+    text-align: center;
+}
+
+nav.sidebar li a {
+    padding: 15px 0;
+    width: 100%;
+}
+
+nav.sidebar.active {
+    right: 0;
+}
+
+nav.topbar button.sidebar-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+nav.topbar button.sidebar-btn label {
+    width: 80%;
+    height: 3px;
+    border-radius: 20px;
+    background: #000;
+    transition: all ease 0.3s;
+}
+
+nav.topbar button.sidebar-btn label:nth-child(2) {
+    margin: 5px 0px;
+}
+
+nav.topbar button.sidebar-btn.active label:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+nav.topbar button.sidebar-btn.active label:nth-child(2) {
+    transform: scale(0);
+}
+
+nav.topbar button.sidebar-btn.active label:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+nav.sidebar.active ~ .nav-overlay {
+    background-color: #000;
+    opacity: 0.2;
+    transition: all ease 0.3s;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+}
+
+@media (min-width: 576px) {
+    nav.topbar .navbar {
+        display: flex;
+    }
+
+    nav.sidebar {
+        display: none;
+    }
+
+    nav.topbar button.sidebar-btn {
+        display: none;
+    }
 }
 
 main.container {
