--- a/public/css/client/not-found.css
+++ b/public/css/client/not-found.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: calc(100vh - var(--footer-height));
+    height: calc(100vh - var(--nav-height));
     text-align: center;
 }
 
