--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -21,3 +21,27 @@
     src: url('../assets/fonts/Montserrat/Montserrat-Medium.ttf');
     font-weight: 500;
 }
+
+@font-face {
+    font-family: 'RobotoSlab';
+    src: url('../assets/fonts/RobotoSlab/RobotoSlab-Regular.ttf');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'RobotoSlab';
+    src: url('../assets/fonts/RobotoSlab/RobotoSlab-Bold.ttf');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'RobotoSlab';
+    src: url('../assets/fonts/RobotoSlab/RobotoSlab-Light.ttf');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'RobotoSlab';
+    src: url('../assets/fonts/RobotoSlab/RobotoSlab-Medium.ttf');
+    font-weight: 500;
+}
