--- a/resources/scss/_global.scss
+++ b/resources/scss/_global.scss
@@ -1,8 +1,18 @@
-@import url("normalize.css");
-@import url("fonts.css");
+@use 'mixins/add-font.scss' as *;
+
+@import 'normalize';
+
+@include add-font("Montserrat", "Regular");
+@include add-font("Montserrat", "Bold");
+
+@include add-font("RobotoSlab", "Regular");
+@include add-font("RobotoSlab", "Bold");
 
 * {
     box-sizing: border-box;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 ul {
@@ -16,9 +26,7 @@ li {
 
 body {
     background-color: #eeeeee;
-    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    margin: 0;
 }
 
 a {
