[fix] arreglando detalles en los archivos css y js

--- a/resources/scss/mixins/_add-font.scss
+++ b/resources/scss/mixins/_add-font.scss
@@ -1,30 +1,4 @@
-@function capitalize($string) {
-    @return to-upper-case(str-slice($string, 1, 1)) + str-slice($string, 2);
-}
-
-@function getWeight($weight) {
-    @if $weight == "Thin" {
-        @return 100;
-    } @else if $weight == "ExtraLight" {
-        @return 200;
-    } @else if $weight == "Light" {
-        @return 300;
-    } @else if $weight == "Regular" {
-        @return 400;
-    } @else if $weight == "Medium" {
-        @return 500;
-    } @else if $weight == "SemiBold" {
-        @return 600;
-    } @else if $weight == "Bold" {
-        @return 700;
-    } @else if $weight == "ExtraBold" {
-        @return 800;
-    } @else if $weight == "Black" {
-        @return 900;
-    } @else {
-        @return 400;
-    }
-}
+@use '../functions' as *;
 
 @mixin add-font($font-family, $font-weight) {
     $parsed_font-family: capitalize(
@@ -40,7 +14,7 @@
             ),
     );
 
-    $weight: getWeight($parsed_font-weight);
+    $weight: get-weight($parsed_font-weight);
 
     @font-face {
         font-display: swap;
