--- a/resources/scss/app/templates/_footer.scss
+++ b/resources/scss/app/templates/_footer.scss
@@ -1,3 +1,5 @@
+@use '../../variables' as global_variables;
+
 footer {
     display: flex;
     flex-direction: column;
@@ -7,7 +9,7 @@ footer {
     .top {
         display: flex;
         flex-direction: column;
-        background-color: #cacaca;
+        background-color: global_variables.$background-contrast-color;
         padding: 10px 0;
 
         .contact {
@@ -30,7 +32,7 @@ footer {
     .content {
         height: 100%;
         padding: 30px 40px;
-        background-color: #d8d8d8;
+        background-color: global_variables.$background-color;
 
         .main {
             display: flex;
@@ -41,29 +43,39 @@ footer {
                 display: flex;
             }
 
+            .logo {
+                display: flex;
+                flex-direction: column;
+            }
+
             .logo-container {
-                max-width: 400px;
+                max-width: 100px;
                 width: 100%;
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+
+                    g {
+                        fill: global_variables.$primary-color
+                    }
+                }
             }
 
             .links {
                 justify-content: flex-start;
                 margin-top: 20px;
+
+                ul li {
+                    margin-bottom: 5px;
+                    color: global_variables.$text-color;
+                }
             }
 
             h4 {
                 font-size: 1.2em;
                 margin-bottom: 10px;
             }
-
-            .links ul li {
-                margin-bottom: 5px;
-            }
-        }
-
-        img.logo {
-            width: 100%;
-            max-width: 100px;
         }
 
         .main .newsletter {
@@ -124,7 +136,7 @@ footer {
     .bottom {
         text-align: center;
         padding: 14px 0;
-        background-color: #b1b1b1;
+        background-color: global_variables.$background-contrast-color;
     }
 }
 
