--- a/resources/scss/app/templates/_nav.scss
+++ b/resources/scss/app/templates/_nav.scss
@@ -1,4 +1,5 @@
 @use '../variables' as *;
+@use '../../variables' as global_variables;
 
 nav.topbar {
     display: flex;
@@ -6,7 +7,7 @@ nav.topbar {
     align-items: center;
     padding: 0 20px;
     height: $nav-height;
-    background: #fff;
+    background-color: #000000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     top: 0;
     left: 0;
@@ -26,9 +27,13 @@ nav {
             width: $nav-height;
             height: $nav-height;
 
-            img {
+            svg {
                 width: 100%;
                 height: 100%;
+
+                g {
+                    fill: global_variables.$primary-color
+                }
             }
         }
 
@@ -38,8 +43,16 @@ nav {
 
             .navbar-item {
                 margin: 0 10px;
-                color: #000;
                 cursor: pointer;
+
+                a {
+                    color: global_variables.$text-color;
+
+                    &:hover {
+                        color: global_variables.$primary-color;
+                        text-decoration: underline;
+                    }
+                }
             }
         }
     }
